--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,14 @@ build-backend = "maturin"
 [project]
 name = "cosmic_text_py"
 requires-python = ">=3.8"
+version = "0.1.0"
+authors = [
+    { name = "Kurbanov Bulat", email = "kurbanovbul@gmail.com" },
+]
+license-files.paths = [
+    "LICENSE-APACHE",
+    "LICENSE-MIT",
+]
 classifiers = [
     "Programming Language :: Rust",
     "Programming Language :: Python :: Implementation :: CPython",
